--- a/src/app/modules/home/chef.component.html
+++ b/src/app/modules/home/chef.component.html
@@ -11,8 +11,11 @@
         
             <mat-form-field class="example-form-field">
                 <mat-label>Pizza Name</mat-label>
-                <input matInput type="text" [(ngModel)]="value">
-                <button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+                <input matInput placeholder="Name" 
+                [(ngModel)]="PizzaName"                    
+                [ngModelOptions]=" {standalone: true}">
+
+                <button matSuffix mat-icon-button aria-label="Clear" (click)="PizzaName=''">
                     <mat-icon>close</mat-icon>
                 </button>
             </mat-form-field>
@@ -23,12 +26,14 @@
                 <p><mat-checkbox >{{ topping.name }}</mat-checkbox></p>
               </section>
                          
-          
             <p>
                 <mat-form-field class="example-form-field">
                     <mat-label>Price</mat-label>
-                    <input matInput type="text" [(ngModel)]="value">
-                    <button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+                    <input matInput 
+                    placeholder="Price" 
+                    [(ngModel)]="PizzaName"                    
+                    [ngModelOptions]=" {standalone: true}">
+                    <button matSuffix mat-icon-button aria-label="Clear" (click)="PizzaPrice=''">
                         <mat-icon>close</mat-icon>
                     </button>
                 </mat-form-field>
@@ -36,17 +41,18 @@
             <p>
                 <mat-form-field class="example-full-width">
                     <mat-label>Description</mat-label>
-                    <textarea matInput placeholder="Ex. Tasty Cheesy Pizza..."></textarea>
+                    <textarea matInput 
+                    placeholder="Ex. Tasty Cheesy Pizza..."
+                    [(ngModel)]="PizzaName"                    
+                    [ngModelOptions]=" {standalone: true}">>
+                </textarea>
                   </mat-form-field>
             </p>
 
             <div class="create">
-              <button mat-raised-button>Create Pizza</button>
+              <button mat-raised-button (click)="CreatePizza()">Create Pizza </button>
             </div>
-        
-        
-        
-        
+
             </div>
         </div>
     </mat-drawer>
@@ -72,7 +78,7 @@
                   <h3>Menu</h3>
 
                   <div class="flex flex-col">
-                      <mat-card *ngFor="let pizza of pizzas" class="w-60 h-60">
+                      <mat-card *ngFor="let pizza of pizzas" class="w-600 h-600">
                           <mat-card-header>
                               <div mat-card-avatar class="example-header-image"></div>
                               <mat-card-title>{{pizza.name}}</mat-card-title>
@@ -86,8 +92,10 @@
                               </p>
                           </mat-card-content>
                           <mat-card-actions>
-                              <button [color]="primary" mat-button>Delete</button>
-                              <button [color]="primary" mat-button>Edit</button>
+
+                            <button mat-button color="primary" (click)="DeletePizza()">Delete</button>
+                            <button mat-button color="primary" (click)="EditPizza()">Edit</button>
+                            
                           </mat-card-actions>
                       </mat-card>
                   </div>
