--- a/src/app/modules/sign-in/signin.component.html
+++ b/src/app/modules/sign-in/signin.component.html
@@ -1,21 +1,41 @@
-<div class="flex flex-col mt-8 w-full h-full">
-    <div class="px-10  w-full max-w-3xl">
-        
-        <mat-form-field appearance="outline">
-            <mat-label>UserName</mat-label>
-            <input matInput placeholder="Username" 
-                [(ngModel)]="userName"                    
-                [ngModelOptions]=" {standalone: true}">
-        </mat-form-field>
-
-
-        <mat-form-field appearance="outline">
-            <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" 
-                [(ngModel)]="password"                    
-                [ngModelOptions]=" {standalone: true}">
-        </mat-form-field>
-
-        <button mat-button color="primary" (click)="signIn()">Sign in</button>
+<div class="flex flex-col items-center justify-center h-full">
+    <div class="ml-8 mr-auto ">
+        <div class="max-w-none mx-auto prose prose-sm">
+            
+            <h1>Pizza Management</h1>
+            <p>
+                UserName: 
+                <mat-form-field appearance="outline">
+                    <mat-label>UserName</mat-label>
+                    <input matInput placeholder="Username" 
+                        [(ngModel)]="userName"                    
+                        [ngModelOptions]=" {standalone: true}">
+                </mat-form-field>
+            </p>
+            <p>
+                Password:
+                <mat-form-field appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input matInput placeholder="Password" 
+                        [(ngModel)]="password"                    
+                        [ngModelOptions]=" {standalone: true}">
+                </mat-form-field>
+            </p>
+        </div>
+        <div>
+            <a
+                class="mt-8"
+                mat-flat-button
+                [color]="'primary'"
+                (click)="signIn()"
+                [routerLink]="'/component-template'">
+                <span>Sign In</span>
+                <mat-icon
+                    class="ml-2 icon-size-5"
+                    [svgIcon]="'heroicons_mini:arrow-long-right'"></mat-icon>
+            </a>
+        </div>
     </div>
 </div>
+
+
