--- a/src/app/modules/test/test.component.html
+++ b/src/app/modules/test/test.component.html
@@ -1,110 +1,26 @@
-<div class="flex flex-col mt-8 w-full h-full">
+<div class="flex flex-col flex-auto min-w-0">
 
-    <mat-drawer-container>
-  
-      <mat-drawer mode="side" opened>
-          
-          <div class="px-10 w-full max-w-3xl">
-              <div class="max-w-none mx-auto prose prose-sm">
-  
-              <h1>Create Pizza</h1>
-          
-              <mat-form-field class="example-form-field">
-                  <mat-label>Pizza Name</mat-label>
-                  <input matInput placeholder="Name" 
-                  [(ngModel)]="PizzaName"                    
-                  [ngModelOptions]=" {standalone: true}">
-  
-                  <button matSuffix mat-icon-button aria-label="Clear" (click)="PizzaName=''">
-                      <mat-icon>close</mat-icon>
-                  </button>
-              </mat-form-field>
-  
-              <h4>Select your toppings:</h4>
-              <section class="example-section" *ngFor="let topping of Topping" [formGroup]="toppings">
-                  
-                  <p><mat-checkbox >{{ topping.name }}</mat-checkbox></p>
-                </section>
-                           
-              <p>
-                  <mat-form-field class="example-form-field">
-                      <mat-label>Price</mat-label>
-                      <input matInput 
-                      type="number"
-                      placeholder="Price" 
-                      [(ngModel)]="PizzaPrice"                    
-                      [ngModelOptions]=" {standalone: true}">
-                      <button matSuffix mat-icon-button aria-label="Clear" (click)="PizzaPrice=null">
-                          <mat-icon>close</mat-icon>
-                      </button>
-                  </mat-form-field>
-              </p>      
-              <p>
-                  <mat-form-field class="example-full-width">
-                      <mat-label>Description</mat-label>
-                      <textarea matInput 
-                      placeholder="Ex. Tasty Cheesy Pizza..."
-                      [(ngModel)]="PizzaDescription"                    
-                      [ngModelOptions]=" {standalone: true}">>
-                  </textarea>
-                    </mat-form-field>
-              </p>
-  
-              <div class="create">
-                <button mat-raised-button (click)="CreatePizza()">Create Pizza </button>
-              </div>
-  
-              </div>
-          </div>
-      </mat-drawer>
-  
-  
-      <mat-drawer-content>
-            <div class="px-10 w-full max-w-3xl">
-                <div class="max-w-none mx-auto prose prose-sm">
-                    <img class="w-20" src="logo.svg" alt="Logo image">
-                    <h1>Chef Page</h1>
-                    <p>This is the Chef's page</p>
-  
-                    <h3>Functions</h3>
-                    <ul>
-                        <li>It should allow me to see a list of existing pizzas and their toppings.</li>
-                        <li>It should allow me to create a new pizza and add toppings to it.</li>
-                        <li>It should allow me to delete an existing pizza.</li>
-                        <li>It should allow me to update an existing pizza.</li>
-                        <li>It should allow me to update toppings on an existing pizza.</li>
-                        <li>It should not allow me to enter duplicate pizzas.</li>
-                    </ul>
-  
-                    <h3>Menu</h3>
-  
-                    <div class="flex flex-col">
-                        <mat-card *ngFor="let pizza of pizzas" class="w-600 h-600">
-                            <mat-card-header>
-                                <div mat-card-avatar class="example-header-image"></div>
-                                <mat-card-title>{{pizza.name}}</mat-card-title>
-                                <mat-card-subtitle>{{pizza.topping}}</mat-card-subtitle>
-                            </mat-card-header>
-                            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                                alt="Photo of a Shiba Inu">
-                            <mat-card-content>
-                                <p>
-                                    {{pizza.description}}
-                                </p>
-                            </mat-card-content>
-                            <mat-card-actions>
-  
-                              <button mat-button color="primary" (click)="DeletePizza()">Delete</button>
-                              <button mat-button color="primary" (click)="EditPizza()">Edit</button>
-                              
-                            </mat-card-actions>
-                        </mat-card>
-                    </div>
-                </div>
-            </div>
-      </mat-drawer-content>
-  
-     
-    </mat-drawer-container>
-  </div>
-  
+    <div>
+        <a
+            class="mt-8"
+            mat-flat-button
+            [color]="'primary'"
+            (click)="StartTest()">
+            <span>Start Test</span>
+            <mat-icon
+                class="ml-2 icon-size-5"
+                [svgIcon]="'heroicons_mini:arrow-long-right'"></mat-icon>
+        </a>
+    </div>
+    <!-- Main -->
+    <div class="flex-auto p-6 sm:p-10">
+
+        <div #test></div>        
+
+    <pre>
+        {{ reactiveComponent | json}}
+            </pre>
+
+    </div>
+
+</div>
