--- a/src/app/modules/home/chef.component.html
+++ b/src/app/modules/home/chef.component.html
@@ -67,7 +67,7 @@
                             </p>
                         </mat-card-content>
                         <mat-card-actions>
-                            <button [color]="primary" (click)="DeletePizza(pizza); openDialog('0ms', '0ms')"mat-button>Delete</button>
+                            <button [color]="primary" (click)="DeletePizza(pizza)"mat-button>Delete</button>
                             <button [color]="primary" (click)="EditPizza(pizza)" mat-button>Edit</button>
                         </mat-card-actions>
                     </mat-card>
