--- a/src/app/modules/sign-in/signin.component.html
+++ b/src/app/modules/sign-in/signin.component.html
@@ -15,10 +15,8 @@
                         [ngModelOptions]=" {standalone: true}">
                 </mat-form-field>
             </p>
-            
-            <div>Password:</div>
-
             <p>
+                Password:
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
                     <input matInput placeholder="Password" 
