--- a/src/app/modules/manager/manager.component.html
+++ b/src/app/modules/manager/manager.component.html
@@ -9,6 +9,8 @@
         <!-- Course title & description -->
     <div class="flex">
         <div class="mt-1 text-4xl sm:text-5xl font-extrabold tracking-tight leading-tight text-center">Manager Page</div>        <!--category -->
+
+        <button class="ml-auto" color="white" (click)="signOut()" mat-button>Sign Out</button>
         
     </div>
     <div class="mt-2 text-secondary mb-2">The manager manage the Toppoings: list , crate, update, delet the Toppings </div>                
