--- a/src/app/modules/chef/chef.component.html
+++ b/src/app/modules/chef/chef.component.html
@@ -10,6 +10,8 @@
     <div class="flex">
         <div class="mt-1 text-4xl sm:text-5xl font-extrabold tracking-tight leading-tight text-center">Chef Page</div>        <!-- category -->
         
+        <button class="ml-auto" color="white" (click)="signOut()" mat-button>Sign Out</button>
+
     </div>
     <div class="mt-2 text-secondary mb-2">The chef manage the pizza: list , crate, update, delet the pizzas </div>                
       
