--- a/src/app/modules/sign-in/signin.component.html
+++ b/src/app/modules/sign-in/signin.component.html
@@ -7,7 +7,7 @@
             <h1 class="text-center">Pizza Management</h1>
             
             <p>
-                UserName: 
+                <mat-label>UserName: </mat-label>
                 <mat-form-field appearance="outline">
                     <mat-label>UserName</mat-label>
                     <input matInput placeholder="Username" 
@@ -16,13 +16,16 @@
                 </mat-form-field>
             </p>
             <p>
-                Password:
+                <mat-label>Password: </mat-label>
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input matInput placeholder="Password" 
-                        [(ngModel)]="password"                    
-                        [ngModelOptions]=" {standalone: true}">
-                </mat-form-field>
+                    <input matInput [type]="hide ? 'password' : 'text'"  
+                    [(ngModel)]="password"                    
+                    [ngModelOptions]=" {standalone: true}">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                  </mat-form-field>
             </p>
         </div>
         <div class="text-center">
